<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="citizenlogin">Citizen</string>
    <string name="storelogin">Store Owner</string>
    <string name="app_name">Cov-Aid</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="enter_firstname">Enter First Name</string>
    <string name="enter_lastname">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="register">Register</string>
    <string name="already_registered_login_in">Already Registered? Login In</string>
    <string name="password">Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="not_registered_sign_up">Not Registered? Sign Up</string>
    <string name="login_in_with_phone">Login In with phone</string>
    <string name="enter_uniqueID">Enter Unique ID</string>

    <string name="set_uniqueID">Set Unique ID</string>
    <string name="set_password">Set Password</string>
    <string name="shop_name">Enter Service Name</string>
    <string name="shop_type">Provide Service Type</string>
    <string name="service_prompt">Choose a Service category</string>

    <string-array name="service_arrays">
        <item>Hospital</item>
        <item>Medical Store</item>
        <item>Supermarket</item>
        <item>Grocery Shop</item>
        <item>Bank</item>
        <item>ATM</item>
    </string-array>


    <string name="title_activity_dash">dash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="get_otp">Get OTP</string>
    <string name="todo">TODO</string>
    <string name="_91">+91</string>
    <string name="login">Login As</string>
    <string name="open">open</string>
    <string name="distance_will_appear_here">Distance will Appear Here</string>
    <string name="open_maps_activity">Open Maps Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="citizen_dashboard">Citizen Dashboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="hospitals">HOSPITALS</string>
    <string name="groceries">GROCERIES</string>
    <string name="COVAID">COV-AID</string>
    <string name="pharmacies">PHARMACIES</string>
    <string name="atms">ATMS</string>
    <string name="banks">BANKS</string>
    <string name="back_to_dashboard">Return to Dashboard</string>
    <string name="purchase">Purchase Dashboard</string>
    <string name="send_shopping_list">Send Order</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="add_another_order">Add New Order</string>
    <string name="do_you_want_to_order_or_get_directions">Do you want to order or get directions?</string>
    <string name="store_owner_dashboard">Store Owner Dashboard</string>
    <string name="exit_qr_code">Exit QR Code</string>
    <string name="entry_qr_code">Entry QR Code</string>
</resources>

