<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#280D0AD8">

    <EditText
        android:id="@+id/etUniqueID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/set_uniqueID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUniqueID" />

    <Button
        android:id="@+id/etRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/etNotLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUniqueID"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/etNotLogin"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/already_registered_login_in"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/shop_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/etShopLocLabel"
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="76dp"
        android:layout_height="58dp"
        android:layout_marginStart="96dp"
        android:text="@string/shop_loc"
        android:textColorLink="#A31E1E"
        app:layout_constraintBottom_toTopOf="@+id/etRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etShopName"
        app:layout_constraintVertical_bias="0.227" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/etShopLoc"
        style="@style/AppTheme.AppBarOverlay"
        android:layout_width="74dp"
        android:layout_height="57dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/etCategories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etShopLocLabel"
        app:layout_constraintTop_toBottomOf="@+id/etShopName"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/etCategories"
        android:layout_width="148dp"
        android:layout_height="34dp"
        android:layout_marginBottom="52dp"
        android:entries="@array/service_arrays"
        android:prompt="@string/service_prompt"
        app:layout_constraintBottom_toTopOf="@+id/etRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/etShopTypeLabel" />

    <TextView
        android:id="@+id/etShopTypeLabel"
        android:layout_width="134dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        android:text="@string/shop_type"
        app:layout_constraintBottom_toTopOf="@+id/etRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etShopLocLabel"
        app:layout_constraintVertical_bias="0.362" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassLayout"
        android:layout_width="214dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toTopOf="@+id/etShopName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.486"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSetPassword"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:hint="@string/set_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
