<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".PhoneLoginActivity">

    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="380dp"
        android:autofillHints=""
        android:background="#C1FFFFFF"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:text="@string/_91"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_otp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phonenumber"
        app:layout_constraintVertical_bias="0.129" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="126dp"
        app:srcCompat="@drawable/login1"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="113dp" />

</androidx.constraintlayout.widget.ConstraintLayout>