<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Chocolate"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:hint="@string/enter_firstname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="128dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etPassLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassLayout"
        app:layout_constraintVertical_bias="0.341" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:text="Already Registered? Login "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.545" />

    <ProgressBar
        android:id="@+id/pb_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.154" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:hint="@string/enter_lastname"
        app:layout_constraintBottom_toTopOf="@+id/etUserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etPassLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassLayout"
        android:layout_width="198dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserPassword"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/set_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="234dp"
        android:layout_height="167dp"
        android:src="@drawable/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        tools:srcCompat="@drawable/registration" />

</androidx.constraintlayout.widget.ConstraintLayout>

